<?php

namespace App\Models\pkg_rh;

use Illuminate\Database\Eloquent\Model;
use App\Models\pkg_notifications\Notification;
use Illuminate\Database\Eloquent\Factories\HasFactory;

class Apprenant extends Model
{
    use HasFactory;
}